src/objects/PropertyActivity__c.object
<CustomObject>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <label>ActivityDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActivityType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActivityType</label>
        <referenceTo>PropertyActivityType__c</referenceTo>
        <relationshipLabel>Property Activities</relationshipLabel>
        <relationshipName>Property_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Property Activities</relationshipLabel>
        <relationshipName>Property_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Property Activities</relationshipLabel>
        <relationshipName>Property_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Property Activity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>